--- a/src/main/resources/templates/theme/default/index.html
+++ b/src/main/resources/templates/theme/default/index.html
@@ -79,8 +79,9 @@
 
                             <div class="five wide column">
                                 <a href="#" th:href="@{/blog/{id}(id=${blog.articleId})}" target="_blank">
-                                    <!-- <img src="https://source.unsplash.com/random/1270x720" th:src="@{${blog.coverImage}}"  alt="" class="ui rounded image">-->
-                                    <img src="https://source.unsplash.com/random/1270x720" alt="" class="ui rounded image">
+                                     <img src="https://source.unsplash.com/random/1270x720" th:src="@{${blog.coverImage}}"  alt="" class="ui rounded image">
+<!--                                    <img src="https://source.unsplash.com/random/1270x720" alt="" class="ui rounded image">-->
+<!--                                    <img src="https://picsum.photos/seed/picsum/1720/720" alt="" class="ui rounded image">-->
                                 </a>
                             </div>
                         </div>
