feat: 支持maven进行docker镜像构建

--- a/src/main/resources/templates/theme/default/about.html
+++ b/src/main/resources/templates/theme/default/about.html
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="ui wechat-qr flowing popup transition hidden">
-                    <img src="default/images/wechat.jpg" alt="" class="ui rounded image"
+                    <img src="/default/images/blog_up_avatar.png" alt="" class="ui rounded image"
                          style="width: 110px">
                 </div>
             </div>
