--- a/src/main/resources/templates/theme/default/message_board.html
+++ b/src/main/resources/templates/theme/default/message_board.html
@@ -125,7 +125,7 @@
 
                         <div class="comment" th:each="message : ${messages.getList()}" th:if="!${message.parentMessage}">
                             <a class="avatar">
-<!--                                <img th:src="@{${message.avatar}}" src="default/images/avatar.png">-->
+<!--                                <img th:src="@{${message.avatar}}" src="default/images/blog_up_avatar.png">-->
                                 <img src="default/images/avatar.png" alt=""/>
                             </a>
                             <div class="content">
