--- a/src/main/resources/templates/theme/simple/error/404.html
+++ b/src/main/resources/templates/theme/simple/error/404.html
@@ -12,7 +12,7 @@
     <meta name="description" content="The portfolio of Emil Nikov, freelance web designer and developer">
 	<meta name="author" content="Emil Nikov">
 
-    <link href="/error/css/style.css" rel="stylesheet">
+    <link href="simple/error/css/style.css" rel="stylesheet">
 
     <link rel="shortcut icon" type="image/png" href="https://cdn.jsdelivr.net/gh/WinterChenS/imgrpo/blog/20210816111845.ico">
     <link rel="apple-touch-icon-precomposed" type="image/png" href="http://enstyled.com/img/apple-touch-icon-precomposed.png">
@@ -64,10 +64,10 @@
 	</div>
 
 
-    <script src="/error/js/jki7owr.js"></script>
+    <script src="simple/error/js/jki7owr.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
 
-    <script src="/error/js/custom.js"></script>
+    <script src="simple/error/js/custom.js"></script>
 
 </body>
 </html>
