--- a/src/main/resources/templates/theme/simple/comm/macros.html
+++ b/src/main/resources/templates/theme/simple/comm/macros.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
-<ol class="page-navigator" th:fragment="pageNav(pageInfo, prevText, nextText, prefix)">
-    <th:block th:if="${pageInfo.hasPreviousPage}">
-        <li class="prev"><a th:href="@{'/'+${prefix}+'/'+${pageInfo.prePage}}" th:text="${prevText}"></a></li>
+<ol class="page-navigator" th:fragment="pageNav(pageInfo, prevText, nextText)">
+    <th:block th:if="${pageInfo.isHasPreviousPage()}">
+        <li class="prev"><a th:href="@{/(currPage=${pageInfo.currPage}-1)}" th:text="${prevText}"></a></li>
     </th:block>
 
-
-    <th:block th:each="navIndex :${ pageInfo.navigatepageNums}">
-        <li th:class="${pageInfo.pageNum==navIndex}?'current':''"><a th:href="@{'/'+${prefix}+'/'+ ${navIndex}}"
-                                                                     th:text="${navIndex}"></a></li>
+    <th:block >
+        <li class="current">
+            <a th:href="@{/(currPage=${pageInfo.currPage})}" th:text="${pageInfo.currPage}"></a>
+        </li>
     </th:block>
 
-
-    <th:block th:if="${pageInfo.hasNextPage}">
-        <li class="next"><a th:href="@{'/'+${prefix}+'/'+${pageInfo.nextPage}}" th:text="${nextText}"></a></li>
+    <th:block th:if="${pageInfo.isHasNextPage()}">
+        <li class="next"><a th:href="@{/(currPage=${pageInfo.currPage}+1)}" th:text="${nextText}"></a></li>
     </th:block>
-
 </ol>
 
 <div th:fragment="pageAdminNav(pageInfo)">
     <div class="clearfix">
         <ul class="pagination m-b-5 pull-right">
-            <li th:if="${pageInfo.hasPreviousPage}">
-                <a th:href="@{'?page='+${pageInfo.prePage}}" aria-label="Previous">
+            <li th:if="${pageInfo.isHasPreviousPage()}">
+                <a th:href="@{/(currPage=${pageInfo.currPage}-1)}" aria-label="Previous">
                     <i class="fa fa-angle-left"></i>&nbsp;上一页
                 </a>
             </li>
 
-            <th:block th:each="nav : ${pageInfo.navigatepageNums}">
-                <li th:class="${nav==pageInfo.pageNum}?'active':''"><a th:href="@{'?page='+${nav}}" th:text="${nav}"></a>
+            <th:block >
+                <li class="active"><a th:href="@{'?currPage='+${pageInfo.currPage}}" th:text="${pageInfo.currPage}"></a>
                 </li>
             </th:block>
 
-            <th:block th:if="${pageInfo.hasNextPage}">
+            <th:block th:if="${pageInfo.isHasNextPage()}">
                 <li>
-                    <a th:href="@{'?page='+${pageInfo.nextPage}}" aria-label="Next">
+                    <a th:href="@{'?currPage='+${pageInfo.currPage}+1}" aria-label="Next">
                         下一页&nbsp;<i class="fa fa-angle-right"></i>
                     </a>
                 </li>
             </th:block>
 
-            <li><span th:text="'共'+${pageInfo.pages}+'页'"></span></li>
+            <li><span th:text="'共'+${pageInfo.getTotalPage()}+'页'"></span></li>
         </ul>
     </div>
 </div>
