--- a/src/main/resources/templates/theme/default/blog.html
+++ b/src/main/resources/templates/theme/default/blog.html
@@ -445,7 +445,7 @@
         }*/
 
     function postData() {
-        $.ajax({main
+        $.ajax({
             cache: true,//保留缓存数据
             type: "POST",
             url: "/POSTComments",
