fix: 页面读取变量报错

--- a/src/main/resources/templates/theme/simple/footer.html
+++ b/src/main/resources/templates/theme/simple/footer.html
@@ -20,7 +20,7 @@
         <li th:if="${!#strings.isEmpty(themeConfig.getResume())}"><a class="icon resume" target="_blank" href="http://www.baidu.com"></a></li>
         <li th:if="${!#strings.isEmpty(themeConfig.getWeibo())}"><a class="icon weibo" target="_blank" href="http://www.baidu.com"></a></li>
         <li th:if="${!#strings.isEmpty(themeConfig.getZhihu())}"><a class="icon zhihu" target="_blank" href="http://www.baidu.com"></a></li>
-        <li th:if="${!#strings.isEmpty(themeConfig.getGitHub())}"><a class="icon github" target="_blank" href="http://www.baidu.com"></a></li>
+        <li th:if="${!#strings.isEmpty(themeConfig.getGithub())}"><a class="icon github" target="_blank" href="http://www.baidu.com"></a></li>
         <li th:if="${!#strings.isEmpty(themeConfig.getTwitter())}"><a class="icon twitter" target="_blank" href="http://www.baidu.com"></a></li>
     </ul>
     <p class="copy-right">&copy;
