--- a/src/main/resources/templates/theme/default/about.html
+++ b/src/main/resources/templates/theme/default/about.html
@@ -46,7 +46,7 @@
                     <div class="ui teal basic left pointing label m-margin-tb-tiny">...</div>
                 </div>
                 <div class="ui bottom attached segment">
-                    <a th:if="${!#strings.isEmpty(themeConfig.getGithub)}" href="https://github.com/wulilinghan" class="ui github circular icon button" target="_blank" data-content="https://github.com/wulilinghan" data-position="bottom center">
+                    <a th:if="${!#strings.isEmpty(themeConfig.getGithub())}" href="https://github.com/wulilinghan" class="ui github circular icon button" target="_blank" data-content="https://github.com/wulilinghan" data-position="bottom center">
                         <i class="github icon"></i>
                     </a>
                     <a th:if="${!#strings.isEmpty(themeConfig.getQq())}" th:href="|tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=${themeConfig.getQq()}&website=www.oicqzone.com|" target="_blank" class="ui qq circular icon button" th:data-content="${themeConfig.getQq()}" data-position="bottom center">
